8303813: [Lilliput] (AArch64) Use tbz instead of tst and br in load_klass()

Reviewed-by: phh, stuefe