src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp
@@ -4254,8 +4254,7 @@ void MacroAssembler::load_method_holder(Register holder, Register method) {
 }
 
 // Loads the obj's Klass* into dst.
-// src and dst must be distinct registers
-// Preserves all registers (incl src, rscratch1 and rscratch2), but clobbers condition flags
+// Preserves all registers (incl src, rscratch1 and rscratch2).
 void MacroAssembler::load_nklass(Register dst, Register src) {
   assert(UseCompressedClassPointers, "expects UseCompressedClassPointers");
 
@@ -4263,8 +4262,7 @@ void MacroAssembler::load_nklass(Register dst, Register src) {
 
   // Check if we can take the (common) fast path, if obj is unlocked.
   ldr(dst, Address(src, oopDesc::mark_offset_in_bytes()));
-  tst(dst, markWord::monitor_value);
-  br(Assembler::EQ, fast);
+  tbz(dst, exact_log2(markWord::monitor_value), fast);
 
   // Fetch displaced header
   ldr(dst, Address(dst, OM_OFFSET_NO_MONITOR_VALUE_TAG(header)));
